[project]
name = "zenml-financial-predictions"
version = "0.1.0"
description = ""
authors = [
    {name = "Malek Bouzidi",email = "malek.bouzidi@mfglabs.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
# Tell Poetry to include your package from src/
packages = [
  { include = "zenml_financial_predictions", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
zenml = {extras = ["server"], version = "0.82.1"}  # Pinned to exact version
pandas = ">=2.2.3,<3.0.0"
scikit-learn = ">=1.6.1,<2.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


